移除部门和岗位相关代码